--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Kaydırılabilir Sayfa</title>
+	<title>Sayfa</title>
 	<style>
 		body {
 			overflow-y: scroll; /* Sayfa içeriği boyutundan büyük olduğunda kaydırma çubuğunu göster */
