--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     }
       
     #container {
-		width: calc(100% + 1px);
-		height: calc(100% + 1px);
+		width: calc(100%);
+		height: calc(100% + 1000px);
 		background-color: lightblue;
 		position: absolute;
 	}
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div id="container">
-      <h1>Ekran Boyutundan Bir PikSADASDASDsel Daha Büyük Sayfa</h1>
+      <h1>Ekran Boyutundan Bir Piksel Daha Büyük Sayfa</h1>
     </div>
   </body>
 </html>
