--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <title>Ekran Boyutundan Bir Piksel Daha Büyük Sayfa</title>
     <style>
+	html {
+		overflow: hidden;
+		height: 100%;
+	}
     body {
     	margin: 0;
         padding: 0;
+		overflow: auto;
     }
       
     #container {
