--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <a-entity
             position="0 0 0"
             scale="0.05 0.05 0.05"
-            gltf-model="https://github.com/commandiron/Deneme-Web/blob/master/model_try.gltf"
+            gltf-model="model_try.gltf"
             ></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
